--- a/src/components/image-with-description/image-with-description.module.css
+++ b/src/components/image-with-description/image-with-description.module.css
@@ -12,6 +12,11 @@
   max-width: 250px;
 }
 
+.imageContainer :hover{
+ cursor: pointer;
+ opacity: 0.8;
+}
+
 .descriptionContainer {
   padding-left: 20px;
   max-width: 250px;
