--- a/src/components/image-with-description/image-with-description.module.css
+++ b/src/components/image-with-description/image-with-description.module.css
@@ -1,7 +1,7 @@
 .imageDescriptionContainer {
   display: flex;
   min-height: 70vh;
-  padding: 30px;
+  padding: 30px 130px;
 }
 
 .imageContainer {
@@ -25,9 +25,11 @@
 @media (max-width: 770px) {
   .imageDescriptionContainer {
     flex-direction: column;
+    padding-left: 30px;
   }
 
   .descriptionContainer {
     padding-left: 0;
+    padding-right: 0;
   }
 }
